--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     
-    <script src="./script4.js"></script>
+    <!-- <script src="./script4.js"></script> -->
+    <script src="./cod.js"></script>
 </body>
 </html>
